# Django_restfull

./: .dockerignore  .env.dev  .gitignore  Dockerfile  bookstore_db  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
BookStore/: asgi.py  settings.py  urls.py  wsgi.py
bookstore/: asgi.py  settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: admin.py  urls.py
order/migrations/: 0001_initial.py  0002_rename_product_order_products.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py  factories.py  test_serializer.py
order/tests/test_serializers/: test_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  produtc_serializer.py
product/tests/: __init__.py  factories.py  test_seralizer.py
product/tests/test_serializers/: test_seralizer.py
product/tests/test_viewsets/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
