[project]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = [
    {name = "Luan-LopS",email = "luam10@hotmail.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (==6.2.5)",
    "factory-boy (==3.2.0)",
    "django (>=5.2.5,<6.0.0)",
    "django-admin (>=2.0.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
